<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeFragment"
    tools:ignore="VisualLintBounds">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/user_icon"
            android:layout_width="@dimen/icon_size_large"
            android:layout_height="@dimen/icon_size_large"
            android:contentDescription="@string/user_icon"
            android:src="@drawable/profile_user"/>

        <TextView
            android:id="@+id/app_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"

            android:layout_marginTop="20dp"
            android:text="@string/pocket"
            android:textSize="@dimen/text_large"
            android:textStyle="bold"
            />

        <ImageView
            android:id="@+id/settings_icon"
            android:layout_width="@dimen/icon_size_large"
            android:layout_height="@dimen/icon_size_large"
            android:contentDescription="@string/ach_icon"
            android:src="@drawable/icon_achievement"
            tools:ignore="ImageContrastCheck" />
    </LinearLayout>

    <!-- Search bar added above the CalendarView -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        android:paddingBottom="8dp">

        <EditText
            android:id="@+id/search_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="30dp"
            android:hint="@string/search"
            android:padding="10dp"
            android:drawablePadding="8dp"
            android:textSize="@dimen/text_small"
            android:background="@drawable/yell_black"/>

        <ImageView
            android:id="@+id/calendar_icon"
            android:layout_width="@dimen/icon_size_large"
            android:layout_height="@dimen/icon_size_large"
            android:contentDescription="@string/ach_icon"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:src="@drawable/ic_calendar"
            tools:ignore="ImageContrastCheck"
            />
    </LinearLayout>

    <!-- CalendarView สำหรับเลือกวันที่ -->
    <CalendarView
        android:id="@+id/calendarView"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="0dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/yell_black"/>

    <TextView
        android:id="@+id/History_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/history"
        android:textSize="@dimen/text_large"
        android:textStyle="bold"
        android:layout_marginStart="21dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        />

    <LinearLayout
        android:id="@+id/history_list_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/yell_black">

        <!-- ScrollView สำหรับรายการบิล -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:minHeight="120dp"
            android:background="@drawable/yell_black"
            tools:ignore="UselessParent">

            <LinearLayout
                android:id="@+id/history_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <LinearLayout
                    android:id="@+id/Goal_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/goal_message"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/goal_text"
                        android:textSize="@dimen/text_medium"
                        />

                    <EditText
                        android:id="@+id/goal_input"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:autofillHints=""
                        android:background="@drawable/edittext_border"
                        android:hint="@string/daily_goal_editText"
                        android:inputType="text"
                        android:padding="4dp"
                        android:textColorHint="@color/Hint"
                        android:textSize="16sp"
                        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />
                </LinearLayout>

                <TextView
                    android:id="@+id/no_transactions_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:gravity="center"
                    android:layout_marginTop="30dp"
                    android:textSize="@dimen/text_medium"
                    android:textColor="@android:color/darker_gray" />

                <!-- รายการบิล -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/bill_list"
                    android:padding="8dp"
                    android:layout_marginHorizontal="12dp" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <!-- ปุ่ม conclusion และ addTransactionButton -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="0dp">

        <!-- ปุ่ม Conclusion -->
        <Button
            android:id="@+id/conclusionButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/conclusion"
            android:text="@string/conclusion"
            android:textSize="@dimen/text_medium"
            android:gravity="center"
            android:layout_marginStart="110dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="80dp"
            android:padding="5dp" />

        <!-- ปุ่มเพิ่มรายการ -->
        <ImageButton
            android:id="@+id/addTransactionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="19dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/yell_black"
            android:contentDescription="@string/add_income"
            android:padding="15dp"
            android:src="@drawable/ic_add"
            tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />
    </LinearLayout>

</LinearLayout>